Calculadora/calculadora.h

#ifndef CALCULADORA_H
#define CALCULADORA_H

#ifdef __cplusplus
extern "C" 
{
#endif

// Funciones de la calculadora
double sumar(double a, double b);
double restar(double a, double b);
double multiplicar(double a, double b);
double dividir(double a, double b);

#ifdef __cplusplus
}
#endif
#endif // CALCULADORA_H